# sumpdf

./: .gitignore  AUTHORS  CMakeLists.txt
libpdfdoc/: CMakeLists.txt  Doxyfile
libpdfdoc/doc/: Doxyfile  MainPage.doxygen  footer.html  libpdfdoc.css
libpdfdoc/include/: Doc.hh  DocInfo.hh  Font.hh  Page.hh  Rect.hh  libpdfdoc.hh
libpdfdoc/include/font/: Font.hh  FontDb.hh  FontEncoding.hh  FontType.hh  Glyph.hh  Outline.hh
libpdfdoc/include/graphics/: CharVisitor.hh  Color.hh  ColorMap.hh  ColorSpace.hh  ColorSpaces.hh  ColorSpec.hh  Colour.hh  ExtGraphicsLink.hh  Graphics.hh  GraphicsGroup.hh  GraphicsLink.hh  GraphicsState.hh  GraphicsVisitor.hh  Image.hh  ObjectAppearance.hh  Path.hh  PathSegment.hh  RenderedObject.hh  Text.hh  TextBlock.hh  TextFormat.hh  TextLine.hh  TextState.hh  XObject.hh
libpdfdoc/include/page/: Page.hh  PageContent.hh  PaintOp.hh  PathSegment.hh  TextOp.hh
libpdfdoc/include/util/: CArray.hh  Debug.hh  Exception.hh  Export.hh  Functional.hh  Matrix.hh  Rect.hh  RefPtr.hh  ReferenceCountable.hh  Util.hh
libpdfdoc/src/: Doc.cc  RealDoc.cc  RealDoc.hh  libpdfdoc.cc  testpdf.cc
libpdfdoc/src/core/: Array.cc  Array.hh  Dictionary.cc  Dictionary.hh  Name.cc  Name.hh  ObjWrapper.hh  Object.cc  Object.hh  Ref.cc  Ref.hh  Stream.cc  Stream.hh  String.cc  String.hh  Token.cc  Token.hh  TokenSrc.cc  TokenSrc.hh  TraverseObject.hh
libpdfdoc/src/file/: ArrayReader.cc  ArrayReader.hh  Catalog.cc  Catalog.hh  CompleteObj.cc  CompleteObj.hh  DeRef.hh  Destination.cc  Destination.hh  DictReader.cc  DictReader.hh  DocInfo.cc  DocInfo.hh  ElementDest.cc  ElementFactory.hh  ElementList.hh  ElementPool.cc  ElementPool.hh  ElementReader.cc  ElementReader.hh  ElementSrc.cc  ElementSrc.hh  ElementTracker.cc  File.cc  File.hh  Function.cc  Function.hh  IElement.hh  IElementDest.hh  IElementSrc.cc  IElementSrc.hh  IFile.cc  IFile.hh  NameTree.cc  NameTree.hh  ObjectReader.hh  RawElement.cc  RawElement.hh  RealFile.cc  RealFile.hh  (+5 more)
libpdfdoc/src/font/: AdobeCMap.cc  AdobeCMap.hh  BaseFont.cc  BaseFont.hh  BasicFontDb.cc  BasicFontDb.hh  CodeMap.cc  CodeMap.hh  CompositeFont.cc  CompositeFont.hh  CreateFont.cc  FCFontDb.cc  FCFontDb.hh  FacePool.cc  FacePool.hh  Font.cc  FontCache.cc  FontCache.hh  FontDb.cc  FontDescriptor.cc  FontDescriptor.hh  FontEncoding.cc  FontEncoding.hh  FontException.cc  FontException.hh  FontPool.cc  FontPool.hh  FontSubsetInfo.cc  FontSubsetInfo.hh  FontType.cc  FontType.hh  FreeTypeWrappers.hh  Glyph.cc  Outline.cc  RealGlyph.cc  RealGlyph.hh  SimpleEncoding.cc  SimpleEncoding.hh  SimpleFont.cc  SimpleFont.hh  (+10 more)
libpdfdoc/src/graphics/: CharVisitor.cc  Color.cc  ColorMap.cc  ColorSpace.cc  ColorSpaces.cc  ColorSpec.cc  ColorValue.cc  ColorValue.hh  Colour.cc  CreateXObject.cc  ExtGraphicsLink.cc  ExtGraphicsLink.hh  Graphics.cc  Graphics.hh  GraphicsFactory.cc  GraphicsFactory.hh  GraphicsGroup.cc  GraphicsImpl.hh  GraphicsLink.cc  GraphicsState.cc  GraphicsVisitor.cc  Image.cc  InlineImage.cc  InlineImage.hh  Path.cc  PathSegment.cc  RealColorMap.cc  RealColorMap.hh  RealColorSpace.cc  RealColorSpace.hh  RealGraphicsGroup.cc  RealGraphicsGroup.hh  RealImage.cc  RealImage.hh  RealPath.cc  RealPath.hh  RealText.cc  RealText.hh  RealTextLine.cc  RealTextLine.hh  (+14 more)
libpdfdoc/src/image/: Image.cc  Image.hh  JFIF.cc  JFIF.hh  JpegImage.cc  JpegImage.hh  Pixmap.cc  Pixmap.hh  PngImage.cc  PngImage.hh
libpdfdoc/src/page/: ContentOp.cc  ContentOp.hh  ContentStream.cc  ContentStream.hh  ExtGState.cc  ExtGState.hh  Font.cc  FontPool.hh  GfxParamDict.cc  GfxParamDict.hh  MockResources.cc  MockResources.hh  Page.cc  PageContent.cc  PageInfo.cc  PageInfo.hh  PageNode.cc  PageNode.hh  PageTree.cc  PageTree.hh  PaintOp.cc  PaintOp.hh  PathSegment.cc  RealContent.cc  RealContent.hh  RealImage.cc  RealImage.hh  RealPage.cc  RealPage.hh  RealResources.cc  RealResources.hh  ResourceSet.cc  ResourceSet.hh  Resources.cc  Resources.hh  ResourcesDict.cc  ResourcesDict.hh  StateParamDict.cc  StateParamDict.hh  TextOp.cc  (+4 more)
libpdfdoc/src/stream/: BufferedFilter.cc  BufferedFilter.hh  CCITTFaxStream.cc  CCITTFaxStream.hh  DeflateFilter.cc  DeflateFilter.hh  InStreamBufAdaptor.cc  InStreamBufAdaptor.hh  MockStreamFilter.cc  MockStreamFilter.hh  OutStreamBufAdaptor.cc  OutStreamBufAdaptor.hh  PredictFilter.cc  PredictFilter.hh  RawFilter.cc  RawFilter.hh  Stream.cc  Stream.hh  StreamBufAdaptor.cc  StreamBufAdaptor.hh  StreamError.cc  StreamError.hh  StreamFilter.cc  StreamFilter.hh
libpdfdoc/src/util/: Addr.hh  Backtrace.cc  Backtrace.hh  Debug.cc  Debug.hh  Endian.cc  Endian.hh  Exception.cc  Exception.hh  Export.hh  Matrix.cc  Rect.cc  Rect.hh  RefCountObj.cc  RefCountObj.hh  RefCounter.cc  RefCounter.hh  RefCounterWrapper.hh  RefPtr.cc  RefPtr.hh  ReferenceCountable.cc  SymbolInfo.cc  SymbolInfo.hh  SymbolInfo32.cpp  Util.cc  Util.hh
libpdfdoc/templates/: cc  hh
libpdfdoc/test/: ElementTrackerTest.cc  RealDocTest.cc  RealDocTest.hh  UnitTest.cc
libpdfdoc/test/core/: ArrayTest.cc  ArrayTest.hh  DictionaryTest.cc  DictionaryTest.hh  NameTest.cc  NameTest.hh  ObjectTest.cc  ObjectTest.hh  RefTest.cc  RefTest.hh  StreamTest.cc  StreamTest.hh  StringTest.cc  StringTest.hh  TokenSrcTest.cc  TokenSrcTest.hh  TokenTest.cc  TokenTest.hh
libpdfdoc/test/file/: ArrayReaderTest.cc  ArrayReaderTest.hh  CatalogTest.cc  CatalogTest.hh  DetachTest.cc  (+20 more)
pdfedit/: CMakeLists.txt
pdfedit/src/: DocModel.cc  DocModel.hh  ExceptionDlg.cc  ExceptionDlg.hh  GlyphGraphicsItem.cc  GlyphGraphicsItem.hh  GlyphGroup.cc  GlyphGroup.hh  GraphicsObject.cc  GraphicsObject.hh  InsertTextDlg.cc  InsertTextDlg.hh  MainWnd.cc  MainWnd.hh  PageLoader.cc  PageLoader.hh  PageView.cc  PageView.hh  PathObject.cc  PathObject.hh  PropertiesDlg.cc  PropertiesDlg.hh  QtGraphicsState.cc  QtGraphicsState.hh  TextDlg.cc  TextDlg.hh  TextEdit.cc  TextEdit.hh  TextLineObject.cc  TextLineObject.hh  TextObject.cc  TextObject.hh  TextToolbar.cc  TextToolbar.hh  ToolBox.cc  ToolBox.hh  Util.cc  Util.hh  main.cc  test.cc
pdfedit/ui/: ExceptionDlg.ui  InsertTextDlg.ui  MainWnd.ui  Properties.ui  pdfedit.qrc
(+300 files in other folders)
